Fixe location text vertical alignment

--- a/less/index.less
+++ b/less/index.less
@@ -202,6 +202,9 @@ html, body {
 @import "footer.inc";
 
 .bannerLocation {
+    display:flex;
+    align-items:center;
+    justify-content:center;
     position:absolute;
     .p2r(top,30);
     .p2r(left,30);
